Fix spellings and asset alignments

--- a/css/scss/_global.scss
+++ b/css/scss/_global.scss
@@ -12,6 +12,7 @@ html {
    font-size: 10px;
    line-height: 1.6;
    scroll-behavior: smooth;
+   scroll-padding-top: 10rem;
 }
 
 body {
