--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -105,6 +105,7 @@
 // Featured Projects
 #featured-projects {
    .projects-container {
+      height: 100vh;
       .projects {
          display: grid;
          grid-template-columns: repeat(3, 1fr);
